Disallow any overflow in the editor to avoid scrolling if any component goes beyond the page (e.g. task list)

--- a/src/styles/editor/editor.css
+++ b/src/styles/editor/editor.css
@@ -6,7 +6,7 @@
   transition-duration: 300ms;
   transition-property: opacity;
   transition-timing-function: ease-out;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .editor-initted {
